# e-waha

./: Dockerfile  LICENSE  README.md  pom.xml
EWahaAiApi/: Dockerfile  docker-compose.yml  pyproject.toml
EWahaAiApi/app/: crud.py  database.py  main.py  models.py  schemas.py
EWahaAndroid/: gradle.properties  settings.gradle
EWahaAndroid/app/: build.gradle
EWahaAndroid/app/src/androidTest/java/com/jstarczewski/ewaha/: ExampleInstrumentedTest.kt
EWahaAndroid/app/src/main/: AndroidManifest.xml
EWahaAndroid/app/src/main/res/layout/: activity_locations.xml  activity_main.xml  item_station.xml
EWahaAndroid/app/src/main/res/values/: strings.xml  themes.xml
EWahaAndroid/app/src/main/res/values-night/: themes.xml
EWahaAndroid/gradle/wrapper/: gradle-wrapper.properties
EWahaApi/: docker-compose.yml  pom.xml
EWahaApi/src/main/java/com/buffalo/ewaha/: EWahaApplication.java
EWahaApi/src/test/java/com/buffalo/ewaha/: EWahaApplicationTests.java
src/main/java/com/buffalo/ewaha/: SwaggerConfig.java
src/main/java/com/buffalo/ewaha/commons/: NotAcceptableException.java  PayloadTooLargeException.java  UnprocessableEntityException.java
src/main/java/com/buffalo/ewaha/controller/: PhotoController.java  StationController.java
src/main/java/com/buffalo/ewaha/model/: MyJson.java  MyJsonType.java  MyPostgreSQL94Dialect.java  package-info.java
src/main/java/com/buffalo/ewaha/service/: IPhotoService.java  IStationService.java  PhotoService.java  StationService.java
src/main/resources/: application.properties
(+18 files in other folders)
